--- a/BatteryMonitorBL/Info.plist
+++ b/BatteryMonitorBL/Info.plist
@@ -21,9 +21,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSBluetoothAlwaysUsageDescription</key>
-	<string>BigBattery requires bluetooth to connect to your devices.</string>
+	<string>BigBattery uses Bluetooth to connect to your battery monitoring devices, allowing real-time monitoring of battery status, voltage, current, and temperature. Bluetooth connection is essential for all core functionality of the app.</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
-	<string>BigBattery requires bluetooth to connect to your devices.</string>
+	<string>BigBattery uses Bluetooth to connect to your battery monitoring devices, allowing real-time monitoring of battery status, voltage, current, and temperature. Without Bluetooth access, the app will not be able to display battery information or configure device settings.</string>
 	<key>NSPrivacyAccessoryFileLocation</key>
 	<string>PrivacyInfo.xcprivacy</string>
 	<key>UIApplicationSceneManifest</key>
